// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SceneDialoguePolishPrompt golden > leaves optional blocks out for the generic variant 1`] = `
{
  "system": "장면의 뼈대에서 한 인물의 대사만 손본다. 사건·행동·서술과 다른 인물의 대사는 건드리지 않는다.
뼈대의 따옴표 대사마다 앞에 ⟨n⟩ 번호가 있다. [이 인물]이 말한 대사만 골라, 그 번호와 함께 고친 문장을 돌려줘라. 누가 말했는지는 앞뒤 서술과 호칭으로 판단하고, 확실하지 않은 대사는 건드리지 마라.
페르소나에 적힌 말투·어휘·호칭을 대사에 그대로 반영하라. 이름을 지우고 읽어도 이 인물의 말이라고 알 수 있을 만큼 뚜렷하게 써라.
고치는 것은 이미 있는 대사의 말투·어휘·호흡뿐이다. 대사를 새로 만들거나 하나를 둘로 쪼개지 말고, 한 번호에는 문장 하나만 돌려줘라.
새로운 정보·결정·약속을 대사로 만들지 마라. 뼈대에 없던 사건을 말로 일으키는 것도 금지한다.
이 인물은 자신이 직접 겪었거나 [아는 것]에 적힌 정보만 안다. 뼈대의 이 장면에서 듣기 전에는 모르는 사실을 먼저 말하게 하지 마라.
페르소나에 따옴표로 적힌 예시 대사는 말투를 알려 주는 참고일 뿐이다. 그 문장을 대사로 옮겨 쓰지 마라. 단 [입버릇]에 적힌 표현은 예외다. 이 인물의 대사에서 입버릇답게 되풀이하되, 사건 하나에 한 번을 넘기지 마라. 대사마다 붙이면 러닝개그가 아니라 틱이 된다.
[이전 대사] 목록은 이 인물이 앞선 장면에서 실제로 한 말이다. 어미·호칭·문장 길이를 여기에 맞춰라. 문장 자체를 옮겨 쓰는 것은 금지한다.
[상대별 말투]가 있으면 상대가 누구냐에 따라 존댓말과 반말, 호칭을 그대로 따라라.
[관계 변화]는 앞선 장면에서 바뀐 관계·호칭·말투다. [상대별 말투]와 어긋나면 [관계 변화]가 나중 상태이므로 그것을 따르라.
설명 없이 JSON 배열만 출력하라. 고친 대사는 따옴표 없이 문장만 적는다.
[{"n":3,"text":"고친 대사"}]
고칠 대사가 없으면 빈 배열 []을 출력하라.
서술은 과거형으로 쓰고 한 장면 안에서 시제를 섞지 마라. 대사 안의 시제는 인물의 말이므로 예외다.
대사는 곡선 큰따옴표(“ ”)로 감싸라. 직선 따옴표나 다른 기호로 대신하지 마라.",
  "user": "[이 인물]
하나

[뼈대]
빈 장면",
}
`;

exports[`SceneDialoguePolishPrompt golden > leaves optional blocks out for the generic variant 2`] = `
{
  "system": "장면의 뼈대에서 한 인물의 대사만 손본다. 사건·행동·서술과 다른 인물의 대사는 건드리지 않는다.
뼈대의 따옴표 대사마다 앞에 ⟨n⟩ 번호가 있다. [이 인물]이 말한 대사만 골라, 그 번호와 함께 고친 문장을 돌려줘라. 누가 말했는지는 앞뒤 서술과 호칭으로 판단하고, 확실하지 않은 대사는 건드리지 마라.
페르소나에 적힌 말투·어휘·호칭을 대사에 그대로 반영하라. 이름을 지우고 읽어도 이 인물의 말이라고 알 수 있을 만큼 뚜렷하게 써라.
고치는 것은 이미 있는 대사의 말투·어휘·호흡뿐이다. 대사를 새로 만들거나 하나를 둘로 쪼개지 말고, 한 번호에는 문장 하나만 돌려줘라.
새로운 정보·결정·약속을 대사로 만들지 마라. 뼈대에 없던 사건을 말로 일으키는 것도 금지한다.
이 인물은 자신이 직접 겪었거나 [아는 것]에 적힌 정보만 안다. 뼈대의 이 장면에서 듣기 전에는 모르는 사실을 먼저 말하게 하지 마라.
페르소나에 따옴표로 적힌 예시 대사는 말투를 알려 주는 참고일 뿐이다. 그 문장을 대사로 옮겨 쓰지 마라. 단 [입버릇]에 적힌 표현은 예외다. 이 인물의 대사에서 입버릇답게 되풀이하되, 사건 하나에 한 번을 넘기지 마라. 대사마다 붙이면 러닝개그가 아니라 틱이 된다.
[이전 대사] 목록은 이 인물이 앞선 장면에서 실제로 한 말이다. 어미·호칭·문장 길이를 여기에 맞춰라. 문장 자체를 옮겨 쓰는 것은 금지한다.
[상대별 말투]가 있으면 상대가 누구냐에 따라 존댓말과 반말, 호칭을 그대로 따라라.
[관계 변화]는 앞선 장면에서 바뀐 관계·호칭·말투다. [상대별 말투]와 어긋나면 [관계 변화]가 나중 상태이므로 그것을 따르라.
설명 없이 JSON 배열만 출력하라. 고친 대사는 따옴표 없이 문장만 적는다.
[{"n":3,"text":"고친 대사"}]
고칠 대사가 없으면 빈 배열 []을 출력하라.
서술은 과거형으로 쓰고 한 장면 안에서 시제를 섞지 마라. 대사 안의 시제는 인물의 말이므로 예외다.
대사는 곡선 큰따옴표(“ ”)로 감싸라. 직선 따옴표나 다른 기호로 대신하지 마라.",
  "user": "[이 인물]
하나
말투: 단호

[뼈대]
빈 장면",
}
`;

exports[`SceneDialoguePolishPrompt golden > leaves optional blocks out for the xs variant 1`] = `
{
  "system": "뼈대에서 [이 인물]의 대사만 골라 그 인물 말투로 고쳐라. 번호와 문장만 JSON 배열로: [{"n":1,"text":"…"}]. 대사 개수·사건·다른 인물 대사는 그대로. 새 정보 금지. 입버릇은 되풀이하되 사건 하나에 한 번까지. 없으면 [].",
  "user": "[이 인물]
하나

[뼈대]
빈 장면",
}
`;

exports[`SceneDialoguePolishPrompt golden > leaves optional blocks out for the xs variant 2`] = `
{
  "system": "뼈대에서 [이 인물]의 대사만 골라 그 인물 말투로 고쳐라. 번호와 문장만 JSON 배열로: [{"n":1,"text":"…"}]. 대사 개수·사건·다른 인물 대사는 그대로. 새 정보 금지. 입버릇은 되풀이하되 사건 하나에 한 번까지. 없으면 [].",
  "user": "[이 인물]
하나
말투: 단호

[뼈대]
빈 장면",
}
`;

exports[`SceneDialoguePolishPrompt golden > renders every block for the generic variant 1`] = `
{
  "system": "장면의 뼈대에서 한 인물의 대사만 손본다. 사건·행동·서술과 다른 인물의 대사는 건드리지 않는다.
뼈대의 따옴표 대사마다 앞에 ⟨n⟩ 번호가 있다. [이 인물]이 말한 대사만 골라, 그 번호와 함께 고친 문장을 돌려줘라. 누가 말했는지는 앞뒤 서술과 호칭으로 판단하고, 확실하지 않은 대사는 건드리지 마라.
페르소나에 적힌 말투·어휘·호칭을 대사에 그대로 반영하라. 이름을 지우고 읽어도 이 인물의 말이라고 알 수 있을 만큼 뚜렷하게 써라.
고치는 것은 이미 있는 대사의 말투·어휘·호흡뿐이다. 대사를 새로 만들거나 하나를 둘로 쪼개지 말고, 한 번호에는 문장 하나만 돌려줘라.
새로운 정보·결정·약속을 대사로 만들지 마라. 뼈대에 없던 사건을 말로 일으키는 것도 금지한다.
이 인물은 자신이 직접 겪었거나 [아는 것]에 적힌 정보만 안다. 뼈대의 이 장면에서 듣기 전에는 모르는 사실을 먼저 말하게 하지 마라.
페르소나에 따옴표로 적힌 예시 대사는 말투를 알려 주는 참고일 뿐이다. 그 문장을 대사로 옮겨 쓰지 마라. 단 [입버릇]에 적힌 표현은 예외다. 이 인물의 대사에서 입버릇답게 되풀이하되, 사건 하나에 한 번을 넘기지 마라. 대사마다 붙이면 러닝개그가 아니라 틱이 된다.
[이전 대사] 목록은 이 인물이 앞선 장면에서 실제로 한 말이다. 어미·호칭·문장 길이를 여기에 맞춰라. 문장 자체를 옮겨 쓰는 것은 금지한다.
[다른 등장 인물]에 적힌 말투는 그 인물들의 것이다. 이 인물의 대사가 그 말투를 닮지 않게, 이름을 가려도 누구 말인지 구분되게 써라.
[상대별 말투]가 있으면 상대가 누구냐에 따라 존댓말과 반말, 호칭을 그대로 따라라.
[관계 변화]는 앞선 장면에서 바뀐 관계·호칭·말투다. [상대별 말투]와 어긋나면 [관계 변화]가 나중 상태이므로 그것을 따르라.
설명 없이 JSON 배열만 출력하라. 고친 대사는 따옴표 없이 문장만 적는다.
[{"n":3,"text":"고친 대사"}]
고칠 대사가 없으면 빈 배열 []을 출력하라.
앞서 돌려준 대사가 다음 이유로 반려됐다. 이번에는 어기지 마라: 뼈대에 없는 인물이 등장합니다 (민)
서술은 현재형으로 쓰고 한 장면 안에서 시제를 섞지 마라. 대사 안의 시제는 인물의 말이므로 예외다.
대사는 곡선 큰따옴표(“ ”)로 감싸라. 직선 따옴표나 다른 기호로 대신하지 마라.
장르·톤: 무협
문체 제약: 짧은 문장
작품 금지 규칙 — 어떤 장면에서도 위반하지 마라: 욕설
이 장면의 시점 인물: 하나 — 이 인물의 지각과 내면만 서술하고, 다른 인물의 속마음은 겉으로 드러난 행동·표정으로만 전하라.
이 장면의 인물 관계 단계: 경계 — 이 단계에 맞는 태도와 거리감으로 표현하라.",
  "user": "[이 인물]
준
말투: 느릿함
[입버릇]
- 뭐 별거는 아닌데
[아는 것 — 이 장면 이전]
- 하나가 편지를 받았다
[상대별 말투]
- 하나에게: 반말
[관계 변화 — 이 장면 이전]
- 하나와 준은 이제 서로 이름을 부른다
[이전 대사]
- “빨리 와.”
- “됐어.”

[다른 등장 인물]
- 하나: 짧고 단호한 반말
- 민

[뼈대]
하나가 말했다. ⟨1⟩“가자.”
---
준이 고개를 저었다. ⟨2⟩“싫어.”",
}
`;

exports[`SceneDialoguePolishPrompt golden > renders every block for the rich variant 1`] = `
{
  "system": "장면의 뼈대에서 한 인물의 대사만 손본다. 사건·행동·서술과 다른 인물의 대사는 건드리지 않는다.
뼈대의 따옴표 대사마다 앞에 ⟨n⟩ 번호가 있다. [이 인물]이 말한 대사만 골라, 그 번호와 함께 고친 문장을 돌려줘라. 누가 말했는지는 앞뒤 서술과 호칭으로 판단하고, 확실하지 않은 대사는 건드리지 마라.
페르소나에 적힌 말투·어휘·호칭을 대사에 그대로 반영하라. 이름을 지우고 읽어도 이 인물의 말이라고 알 수 있을 만큼 뚜렷하게 써라.
고치는 것은 이미 있는 대사의 말투·어휘·호흡뿐이다. 대사를 새로 만들거나 하나를 둘로 쪼개지 말고, 한 번호에는 문장 하나만 돌려줘라.
새로운 정보·결정·약속을 대사로 만들지 마라. 뼈대에 없던 사건을 말로 일으키는 것도 금지한다.
이 인물은 자신이 직접 겪었거나 [아는 것]에 적힌 정보만 안다. 뼈대의 이 장면에서 듣기 전에는 모르는 사실을 먼저 말하게 하지 마라.
페르소나에 따옴표로 적힌 예시 대사는 말투를 알려 주는 참고일 뿐이다. 그 문장을 대사로 옮겨 쓰지 마라. 단 [입버릇]에 적힌 표현은 예외다. 이 인물의 대사에서 입버릇답게 되풀이하되, 사건 하나에 한 번을 넘기지 마라. 대사마다 붙이면 러닝개그가 아니라 틱이 된다.
[이전 대사] 목록은 이 인물이 앞선 장면에서 실제로 한 말이다. 어미·호칭·문장 길이를 여기에 맞춰라. 문장 자체를 옮겨 쓰는 것은 금지한다.
[다른 등장 인물]에 적힌 말투는 그 인물들의 것이다. 이 인물의 대사가 그 말투를 닮지 않게, 이름을 가려도 누구 말인지 구분되게 써라.
[상대별 말투]가 있으면 상대가 누구냐에 따라 존댓말과 반말, 호칭을 그대로 따라라.
[관계 변화]는 앞선 장면에서 바뀐 관계·호칭·말투다. [상대별 말투]와 어긋나면 [관계 변화]가 나중 상태이므로 그것을 따르라.
설명 없이 JSON 배열만 출력하라. 고친 대사는 따옴표 없이 문장만 적는다.
[{"n":3,"text":"고친 대사"}]
고칠 대사가 없으면 빈 배열 []을 출력하라.
앞서 돌려준 대사가 다음 이유로 반려됐다. 이번에는 어기지 마라: 뼈대에 없는 인물이 등장합니다 (민)
서술은 현재형으로 쓰고 한 장면 안에서 시제를 섞지 마라. 대사 안의 시제는 인물의 말이므로 예외다.
대사는 곡선 큰따옴표(“ ”)로 감싸라. 직선 따옴표나 다른 기호로 대신하지 마라.
장르·톤: 무협
문체 제약: 짧은 문장
작품 금지 규칙 — 어떤 장면에서도 위반하지 마라: 욕설
이 장면의 시점 인물: 하나 — 이 인물의 지각과 내면만 서술하고, 다른 인물의 속마음은 겉으로 드러난 행동·표정으로만 전하라.
이 장면의 인물 관계 단계: 경계 — 이 단계에 맞는 태도와 거리감으로 표현하라.",
  "user": "[이 인물]
준
말투: 느릿함
[입버릇]
- 뭐 별거는 아닌데
[아는 것 — 이 장면 이전]
- 하나가 편지를 받았다
[상대별 말투]
- 하나에게: 반말
[관계 변화 — 이 장면 이전]
- 하나와 준은 이제 서로 이름을 부른다
[이전 대사]
- “빨리 와.”
- “됐어.”

[다른 등장 인물]
- 하나: 짧고 단호한 반말
- 민

[뼈대]
하나가 말했다. ⟨1⟩“가자.”
---
준이 고개를 저었다. ⟨2⟩“싫어.”",
}
`;

exports[`SceneDialoguePolishPrompt golden > renders every block for the xs variant 1`] = `
{
  "system": "뼈대에서 [이 인물]의 대사만 골라 그 인물 말투로 고쳐라. 번호와 문장만 JSON 배열로: [{"n":1,"text":"…"}]. 대사 개수·사건·다른 인물 대사는 그대로. 새 정보 금지. 입버릇은 되풀이하되 사건 하나에 한 번까지. 없으면 [].",
  "user": "[이 인물]
준
말투: 느릿함
[입버릇]
- 뭐 별거는 아닌데
[아는 것 — 이 장면 이전]
- 하나가 편지를 받았다
[상대별 말투]
- 하나에게: 반말
[관계 변화 — 이 장면 이전]
- 하나와 준은 이제 서로 이름을 부른다
[이전 대사]
- “빨리 와.”
- “됐어.”

[다른 등장 인물]
- 하나: 짧고 단호한 반말
- 민

[뼈대]
하나가 말했다. ⟨1⟩“가자.”
---
준이 고개를 저었다. ⟨2⟩“싫어.”",
}
`;
